# RustGlitch

./: .gitattributes  .gitignore  Cargo.toml  README.md  call_infill.py  feature_flags.txt  func_filters.json  log2.txt  panic_filters.json  panic_filters_orig.json  requirements.txt  requirements_ascend.txt  requirements_nv.txt  test.py  todo.md  train_ascend.py  train_nv.py
cppmutate_cpp/: .gitignore  CMakeLists.txt  Dockerfile  conf.cpp  conf.hpp  conf.json  do_visit.cpp  do_visit.hpp  fenwick.hpp  main.cpp  mutator.cpp  mutator.hpp
cppmutate_cpp/progress_bar_cpp/include/: ProgressBar.hpp
cppmutate_cpp/progress_bar_cpp/src/: ProgressBar.cpp
docs/: ARCHITECTURE.zh-CN.md  USAGE.zh-CN.md
results/: 0.rs  1.rs  2.rs  3.rs  4.rs  5.rs
scripts/: get_ice_issue_code.py
src/: conf.rs  main.rs  util.rs
src/display/: messages.ftl  mod.rs  syn_enum_display.rs
src/fuzz/: feature_list.rs  fuzz.rs  fuzzbase.rs  mod.rs  rand_choose.rs  rustcfuzz.rs  splicer.rs  strategy.rs  synfuzz.rs
src/ice_process/: flagbisect.rs  mod.rs  panicfunc.rs  querystack.rs
src/pipeline/: dsl.rs  mod.rs  runtime.rs  types.rs
src/splicer/: mod.rs
src/stragety/: test.rs
src/strategies/: mod.rs
src/strategies/bracketsmask/: mod.rs
src/strategies/cppmutate/: mod.rs
src/strategies/models/: llama_cpp.rs  mod.rs  model_fuzzer.py  python_api.rs
src/strategies/splicer/: mod.rs
src/strategies/syn/: astmasker.rs  mod.rs
src/strategies/syn/strategy/: consts.rs  mod.rs
src/strategies/syn/strategy/expr/: expr.rs  exprarray.rs  exprasync.rs  exprawait.rs  exprbin.rs  exprblock.rs  exprbreak.rs  exprconst.rs  exprcontinue.rs  exprfor.rs  exprif.rs  exprindex.rs  exprinfer.rs  exprlit.rs  exprloop.rs  exprparen.rs  exprrange.rs  exprreturn.rs  exprtry.rs  exprtryblock.rs  exprunary.rs  exprunsafe.rs  exprwhile.rs  expryield.rs  mod.rs
src/strategies/syn/strategy/info/: env.rs
src/strategies/syn/strategy/item/: item.rs  itemfn.rs  itemstruct.rs  mod.rs
src/strategies/syn/strategy/other/: lifetime.rs
src/strategies/syn/strategy/pat/: mod.rs  pat.rs  patconst.rs  patident.rs  patlit.rs  pator.rs  patparen.rs  patrange.rs  patref.rs  patrest.rs  pattype.rs  patwild.rs
src/strategies/syn/strategy/stmt/: block.rs  stmt.rs  stmtexpr.rs  stmtitem.rs  stmtlocal.rs
src/strategies/syn/strategy/token/: mod.rs
src/strategies/syn/strategy/type/: mod.rs  type.rs  typearr.rs  typegroup.rs  typeinfer.rs  typenever.rs  typeparen.rs  typepath.rs  typeptr.rs  typeref.rs  typeslice.rs
src/strategies/synmutate/: astmutator.rs  mod.rs
src/strategy/: consts.rs  mod.rs
src/strategy/expr/: expr.rs  exprasync.rs  exprawait.rs  exprbin.rs  exprblock.rs  exprbreak.rs  exprconst.rs  exprcontinue.rs  exprfor.rs  exprif.rs  exprlit.rs  exprloop.rs  exprparen.rs  exprrange.rs  exprreturn.rs  exprtry.rs  exprtryblock.rs  exprunary.rs  exprunsafe.rs  exprwhile.rs  expryield.rs  mod.rs
src/strategy/info/: env.rs
src/strategy/item/: item.rs  itemfn.rs  mod.rs
src/strategy/other/: lifetime.rs
src/strategy/pat/: mod.rs  pat.rs  patconst.rs  pator.rs  patparen.rs  patrange.rs  patref.rs  patrest.rs  pattype.rs  patwild.rs
src/strategy/stmt/: block.rs  mod.rs  stmt.rs  stmtexpr.rs  stmtitem.rs  stmtlocal.rs
src/strategy/type/: type.rs  typearr.rs  typegroup.rs  typeinfer.rs  typenever.rs  typeparen.rs  typepath.rs  typeptr.rs  typeref.rs  typeslice.rs
