[package]
name = "nfuzz"
version = "0.1.0"
edition = "2024"

# [toolchain]
# channel = "nightly"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
ctor = "0.4.1"
inventory = "0.3.19"
ouroboros = "0.18.5"
proc-macro2 = "1.0.94"
quote = "1.0.38"
rand = "0.9.0"
rand_chacha = "0.9.0"
rayon-core = "1.12.1"
# rustc_errors = { path = "/home/lw/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/rustc-src/rust/compiler/rustc_errors" }
syn = { version = "2.0.98", features = [
    "full",
    "visit-mut",
    "extra-traits",
    "fold",
] }
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.3"
tree-splicer = "0.6.0"
tree-splicer-rust = "0.6.0"
walkdir = "2.5.0"
