[package]
name = "nfuzz"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[features]
default = []
nightly-syn = []

# [toolchain]
# channel = "nightly"

[build]
rustflags = [
    "-C",
    "link-arg=-Wl,-zstack-size=134217728", # 128MB stack size
]

[dependencies]
async-openai = "0.28.0"
clap = { version = "4.5.28", features = ["derive"] }
ctor = "0.4.1"
dyn-clone = "1.0.19"
inventory = "0.3.19"
ouroboros = "0.18.5"
proc-macro2 = { version = "1.0.94", features = ["span-locations"] }
quote = "1.0.38"
rand = "0.9.0"
rand_chacha = "0.9.0"
rayon-core = "1.12.1"
regex = "1.11.1"
signal-hook = "0.3.17"
syn = { version = "2.0.98", features = [
    "full",
    "visit-mut",
    "extra-traits",
    "fold",
] }
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.3"
tree-splicer = "0.6.0"
walkdir = "2.5.0"
# llama_cpp_rs = "0.3.0"
# llama_cpp_rs = {path = "../rust-llama.cpp"}
llama-cpp-2 = "0.1.102"
encoding_rs = "0.8.35"
serde_json = "1.0.140"
colored = "3.0.0"
pyo3 = { version = "0.24.2", features = ["auto-initialize"] }
indexmap = "2.9.0"
prettyplease = "0.2.32"
wait-timeout = "0.2.1"
clang-sys = { version = "1.8.1", features = ["clang_18_0"] }
clang = { version = "2.0.0", features = ["clang_10_0"] }
